# DSKCF_CPP

./: CMakeLists.txt  README.md  exampleDSKCF.bat
cmake/: FindTBB.cmake
src/: doxygen_dummy.hpp  mainpage.dox
src/cf_libs/common/: DepthHistogram.cpp  DepthHistogram.h  KalmanFilter1D.cpp  KalmanFilter1D.h  KalmanFilter2D.cpp  KalmanFilter2D.h  Typedefs.hpp  cf_tracker.hpp  circularbuffer.hpp  feature_channels.hpp  mat_consts.hpp  math_helper.cpp  math_helper.hpp  optional.hpp  tracker_debug.hpp
src/cf_libs/dskcf/: ColourFeatureChannelProcessor.cpp  ColourFeatureChannelProcessor.h  ConcatenateFeatureChannelProcessor.cpp  ConcatenateFeatureChannelProcessor.h  DepthFeatureChannelProcessor.cpp  DepthFeatureChannelProcessor.h  DepthSegmenter.cpp  DepthSegmenter.hpp  FeatureChannelProcessor.hpp  FeatureExtractor.cpp  FeatureExtractor.hpp  LinearFeatureChannelProcessor.cpp  LinearFeatureChannelProcessor.h  OcclusionHandler.cpp  OcclusionHandler.hpp  ScaleAnalyser.cpp  ScaleAnalyser.hpp  ScaleChangeObserver.hpp  dskcf_tracker.cpp  dskcf_tracker.hpp  dskcf_tracker_run.cpp  dskcf_tracker_run.hpp
src/cf_libs/kcf/: DepthWeightKCFTracker.cpp  DepthWeightKCFTracker.h  GaussianKernel.cpp  GaussianKernel.hpp  HOGFeatureExtractor.cpp  HOGFeatureExtractor.hpp  Kernel.cpp  Kernel.hpp  kcf_debug.hpp  kcf_tracker.cpp  kcf_tracker.hpp
src/main/: image_acquisition.hpp  main_dskcf.cpp
